--- a/stylesheets/M_cards.css
+++ b/stylesheets/M_cards.css
@@ -31,7 +31,6 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: 50px;
-  animation: openApp 0.8s ease-in-out;
 }
 
 .popup {
@@ -45,10 +44,6 @@
   top: 50px;
   z-index: 2;
   cursor: pointer;
-}
-
-.pop-card {
-  backdrop-filter: blur(5px);
 }
 
 .card img {
